--- a/frontend/src/component/layout/Contact/Contact.css
+++ b/frontend/src/component/layout/Contact/Contact.css
@@ -6,19 +6,35 @@
   place-items: center;
   background-color: white;
   position: fixed;
+  background-image: linear-gradient(
+    to bottom right,
+    rgb(0, 50, 157),
+    rgb(109, 188, 252)
+  );
 }
 
 .mailBtn {
+  background-color: rgb(212, 235, 255);
+  border:none; 
+  border-radius: 4px;
   text-decoration: none;
   transform: translateX(-100vw);
   animation: mailBtnAnimation 2s forwards;
 }
 
 .mailBtn > button {
+  border: none;
+  border-radius: 4px;
   text-decoration: none;
   font: 200 2vmax "Roboto";
-  cursor: url("https://img.icons8.com/color/48/000000/edit--v2.png"), pointer;
+  cursor: url("https://img.icons8.com/fluency/48/mail--v1.png"), pointer;
   padding: 2vmax;
+  transition: all 0.5s;
+}
+
+.mailBtn > button:hover {
+  box-shadow: 0 0 10px rgba(15, 15, 15, 0.26);
+  transform: translateY(-0.5vmax);
 }
 
 @keyframes mailBtnAnimation {
