added jfif cover

--- a/frontend/src/component/Home/Home.css
+++ b/frontend/src/component/Home/Home.css
@@ -1,5 +1,5 @@
 .banner {
-  background-image: url("../../images/cover3.png");
+  background-image: url("../../images/cover3.jfif");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
